--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.153",
     "@mui/material": "^5.14.18",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "final-form": "^4.20.10",
     "next": "14.0.3",
     "react": "^18",
